--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ADVERTISING MEDIA GRAPHICS</title>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://github.com/punya528/advertisingWeb/blob/gh-pages/css/main.css">
 
 </head>
 
