--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
 <script>
 
 </script>
-<script type="text/javascript" src="js/greensock-js/src/minified/TweenMax.min.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
+
+<script type="text/javascript" src="https://github.com/punya528/advertisingWeb/blob/gh-pages/js/main.js"></script>
 </html>
