--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ADVERTISING MEDIA GRAPHICS</title>
-  <link rel="stylesheet" href="https://github.com/punya528/advertisingWeb/blob/gh-pages/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -77,6 +77,6 @@
 <script>
 
 </script>
-
-<script type="text/javascript" src="https://github.com/punya528/advertisingWeb/blob/gh-pages/js/main.js"></script>
+<script type="text/javascript" src="js/greensock-js/src/minified/TweenMax.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </html>
