--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="setElement">
           <svg height="1000" width="1000">
-            <a onmousemove="set3dWebBtn('_active')" onmouseout="set3dWebBtn('')" class="Url" href="3dweb.html">
+            <a onmousemove="set3dWebBtn('_active')" onmouseout="set3dWebBtn('')" class="Url" href="threedweb.html">
               <polygon class="svgBtn" points="0,75 0,200 335,535 395,470" style="fill:lime;stroke:purple;stroke-width:1" />
             </a>
             <a onmousemove="setPrintingBtn('_active')" onmouseout="setPrintingBtn('')" class="Url" href="#">
