--- a/threedweb.html
+++ b/threedweb.html
@@ -112,7 +112,7 @@ function testGetImgsize(){
 setTimeout(testGetImgsize,5000);
 
         </script>
-
+  <script type="text/javascript" src="js/threedweb.js"></script>
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
