--- a/threedweb.html
+++ b/threedweb.html
@@ -26,10 +26,12 @@
 
   <div id="slide"></div>
   <a class="btn btn-primary" href="index.html">BACK</a>
-        
-  <script type="text/javascript" src="js/threedweb.js"></script>
+
+
+
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/threedWeb.js"></script>
 
 </body>
 
