--- a/threedweb.html
+++ b/threedweb.html
@@ -31,7 +31,7 @@
 
   <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/threedWeb.js"></script>
+  <script type="text/javascript" src="js/threedweb.js"></script>
 
 </body>
 
